--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "tslib": "~2.6"
   },
   "volta": {
